# primer

./: .gitignore  LICENSE  README.md
examples/demo-project/: AGENTS.md  CLAUDE.md  Cargo.toml
examples/demo-project/.ai/: project.yaml
examples/demo-project/.ai/evolution/: log.jsonl
examples/demo-project/.ai/knowledge/: constraints.toml  failures.toml  gotchas.toml  manifest.toml
examples/demo-project/.ai/knowledge/decisions/: 0001-use-tokio.md
examples/demo-project/.ai/phases/: bootstrap.yaml  growth.yaml
lib/: core.sh  emit.sh  evolve.sh  hooks.sh  init.sh  kpl.sh  layer1.sh  mcp.sh  seams.sh
plugins/generators/: agents-md.sh  claude-md.sh  cursorrules.sh  hermes-md.sh
plugins/hooks.d/on-knowledge-update/: 10-regenerate-shims.sh
plugins/hooks.d/post-emit/: 10-sync-claude-hooks.sh
plugins/hooks.d/pre-generate/: 10-load-phase.sh  20-inject-knowledge.sh
plugins/validators/: schema.sh  security.sh
schema/: manifest.v1.json  project.v1.json  proposal.v1.json
templates/global-base/.ai/: trust-policy.yaml
templates/global-base/.ai/defaults/: build-patterns.toml  git-conventions.toml  quality-gates.toml
templates/global-base/.ai/hooks/: README.md
templates/go-service/.ai/: project.yaml
templates/go-service/.ai/knowledge/: constraints.toml  gotchas.toml
templates/nextjs-app/.ai/: project.yaml
templates/python-api/.ai/: project.yaml
templates/rust-cli/.ai/: project.yaml
templates/typescript-lib/.ai/: project.yaml
tests/: sample-project.yaml  test-all.sh  test-e2e.sh  test-generators.sh  test-kpl.sh
(+23 files in other folders)
