[package]
name = "fastcache"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
description = "A Redis-compatible in-memory cache with persistence and cluster support"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
dashmap = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
